syntax = "proto3";

import "google/protobuf/empty.proto";

package booking;
option go_package = "./proto";

service BookingService {
  rpc GetUserHistory (UserId) returns (BookingList);
  rpc GetBooking (BookingId) returns (BookingResponse);
  rpc GetUnavailableSeat (BookingTime) returns (SeatList);
  rpc CreateBooking (BookingRequest) returns (BookingResponse);
  rpc UpdateBooking (BookingUpdateRequest) returns (BookingResponse);
  rpc UpdateBookingStatus (UpdateBookingStatusRequest) returns (BookingResponse);
  rpc DeleteBooking (BookingId) returns (google.protobuf.Empty);
}

message BookingId {
  int64 id = 1;
}

message UserId {
  int64 userId = 1;
}

message Seat {
  int32 seatId = 1;
}

message SeatList {
  repeated Seat seats = 1;
}

message BookingTime {
  int64 startTime = 1;
  int64 endTime = 2;
}

message BookingRequest {
  UserId user = 1;
  BookingTime bookingTime = 2;
  Seat seat = 3;
  BookingStatusEnum status = 4;
}

message BookingResponse {
  BookingId id = 1;
  BookingRequest bookingData = 2;
  int64 checkinTime = 3;
  int64 checkoutTime = 4;
  bool isActive = 5;
}

message BookingList {
  repeated BookingResponse bookings = 1;
}

message BookingUpdateRequest {
  BookingId id = 1;
  BookingRequest bookingData = 2;
}

enum BookingStatusEnum {
  UNKNOWN = 0;
  BOOKED = 1;
  CHECKED_IN = 2;
  COMPLETED = 3;
  MISSED = 4;
}

message UpdateBookingStatusRequest {
  BookingId id = 1;
  BookingStatusEnum status = 2;
}
